the h2 tag had formatting issues on smallest setting. Corrected this issue.

--- a/styles/main.css
+++ b/styles/main.css
@@ -122,7 +122,7 @@ ul {
   
 .page {
   width: 100%;
-  padding: .5rem 2.2rem .5rem .5rem;
+  padding: .5rem 2.2rem .5rem 2.2rem;
   font-size: 2rem;
   }
 .item-container {width: 100%;}
